Clean up base64 encoding to include “data:” header

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -20,7 +20,7 @@
             document.getElementById("start-stream").addEventListener("click", function () {
                 streamModelSource = new EventSource("http://localhost:8080/workspace/stream-view");
                 streamModelSource.onmessage = function (event) {
-                    demoDrawingImage.src = "data:image/png;base64, " + event.data;
+                    demoDrawingImage.src = event.data;
                 };
             });
 
