--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -8,6 +8,7 @@
         <th:block>
             <h1>Demo!</h1>
             <button id="register-reports">Register Reports</button>
+            <button id="go">Go</button>
             <button id="start-stream">Start Stream</button>
             <button id="end-stream">End Stream</button>
 
@@ -23,31 +24,44 @@
         </th:block>
 
         <script>
-            var streamModelSource;
-
-            var demoTickCount = document.getElementById("demo-tick-count");
-            var demoView = document.getElementById("demo-view");
-            var demoPlots = document.getElementById("demo-plots");
-            var demoReports = document.getElementById("demo-reports");
+            var viewSource;
+            var reportsSource;
+            var plotsSource;
 
             document.getElementById("start-stream").addEventListener("click", function () {
-                streamModelSource = new EventSource("http://localhost:8080/workspace/stream-world");
-                streamModelSource.onmessage = function (event) {
-                    var world = JSON.parse(event.data);
+                viewSource = new EventSource("http://localhost:8080/workspace/stream-view");
+                viewSource.onmessage = function (event) {
+                    document.getElementById("demo-view").src = JSON.parse(event.data).imgSrc;
+                };
 
-                    demoTickCount.innerText = world.tickCount;
-                    demoView.src = world.view.imgSrc;
-                    demoReports.innerHTML = JSON.stringify(world.reports);
-                    demoPlots.innerHTML = JSON.stringify(world.plots);
+                reportsSource = new EventSource("http://localhost:8080/workspace/stream-reports");
+                reportsSource.onmessage = function (event) {
+                    document.getElementById("demo-reports").innerHTML = JSON.stringify(JSON.parse(event.data), undefined, 2);
+                };
+
+                plotsSource = new EventSource("http://localhost:8080/workspace/stream-plots");
+                plotsSource.onmessage = function (event) {
+                    document.getElementById("demo-plots").innerHTML = JSON.stringify(JSON.parse(event.data), undefined, 2);
                 };
             });
 
             document.getElementById("end-stream").addEventListener("click", function () {
-                streamModelSource.close();
+                viewSource.close();
+                reportsSource.close();
+                plotsSource.close();
             });
 
             document.getElementById("register-reports").addEventListener("click", function () {
                 fetch('http://localhost:8080/trust-model/register-reporters', {method: 'post'});
+            });
+
+            document.getElementById("go").addEventListener("click", function () {
+                fetch('http://localhost:8080/workspace/go', {method: 'post'})
+                    .then(function (response) {
+                        response.json().then(function (data) {
+                            document.getElementById("demo-tick-count").innerText = data;
+                        });
+                    });
             });
         </script>
     </body>
